--- a/docs/notebooks/01_ge_minimal.ipynb
+++ b/docs/notebooks/01_ge_minimal.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import sympy as sym\n",
     "from IPython.display import SVG, display\n",
-    "from matrixlayout.ge import grid_tex, grid_svg, grid_tex_specs\n"
+    "from matrixlayout.ge import grid_tex, grid_svg, grid_tex_specs"
    ]
   },
   {
@@ -33,7 +33,7 @@
      "data": {
       "image/svg+xml": [
        "<svg xmlns:inkscape=\"http://www.inkscape.org/namespaces/inkscape\" xmlns:sodipodi=\"http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:svg=\"http://www.w3.org/2000/svg\" width=\"31.266876pt\" height=\"23.921875pt\" viewBox=\"0 0 31.266876 23.921875\" version=\"1.2\" id=\"svg55\" sodipodi:docname=\"ge_min.svg\">\n",
-       "  <sodipodi:namedview id=\"namedview57\" pagecolor=\"#ffffff\" bordercolor=\"#666666\" borderopacity=\"1.0\" inkscape:pageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:document-units=\"pt\"/>\n",
+       "  <sodipodi:namedview id=\"namedview57\" pagecolor=\"#ffffff\" bordercolor=\"#000000\" borderopacity=\"0.25\" inkscape:showpageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:deskcolor=\"#d1d1d1\" inkscape:document-units=\"pt\"/>\n",
        "  <defs id=\"defs28\">\n",
        "    <g id=\"g26\">\n",
        "      <symbol overflow=\"visible\" id=\"glyph0-0\">\n",
@@ -64,22 +64,22 @@
        "  </defs>\n",
        "  <g id=\"surface1\" transform=\"translate(-177.97313,-141.52475)\">\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g32\">\n",
-       "      <use xlink:href=\"#glyph0-1\" x=\"183.647\" y=\"150.101\" id=\"use30\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-1\" x=\"183.647\" y=\"150.101\" id=\"use30\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g36\">\n",
-       "      <use xlink:href=\"#glyph0-2\" x=\"198.591\" y=\"150.101\" id=\"use34\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-2\" x=\"198.591\" y=\"150.101\" id=\"use34\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g40\">\n",
-       "      <use xlink:href=\"#glyph0-3\" x=\"183.647\" y=\"162.056\" id=\"use38\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-3\" x=\"183.647\" y=\"162.056\" id=\"use38\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g44\">\n",
-       "      <use xlink:href=\"#glyph0-4\" x=\"198.591\" y=\"162.056\" id=\"use42\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-4\" x=\"198.591\" y=\"162.056\" id=\"use42\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g48\">\n",
-       "      <use xlink:href=\"#glyph1-1\" x=\"175.895\" y=\"141.931\" id=\"use46\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-1\" x=\"175.895\" y=\"141.931\" id=\"use46\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g52\">\n",
-       "      <use xlink:href=\"#glyph1-2\" x=\"203.99001\" y=\"141.931\" id=\"use50\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-2\" x=\"203.99001\" y=\"141.931\" id=\"use50\"/>\n",
        "    </g>\n",
        "  </g>\n",
        "</svg>"
@@ -101,7 +101,7 @@
     "    output_dir=\"./_out\",\n",
     "    output_stem=\"ge_min\",\n",
     ")\n",
-    "display(SVG(svg))\n"
+    "display(SVG(svg))"
    ]
   },
   {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "bb126b92",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
      "data": {
       "image/svg+xml": [
        "<svg xmlns:inkscape=\"http://www.inkscape.org/namespaces/inkscape\" xmlns:sodipodi=\"http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:svg=\"http://www.w3.org/2000/svg\" width=\"78.56488pt\" height=\"74.94725pt\" viewBox=\"0 0 78.56488 74.94725\" version=\"1.2\" id=\"svg154\" sodipodi:docname=\"output.svg\">\n",
-       "  <sodipodi:namedview id=\"namedview156\" pagecolor=\"#ffffff\" bordercolor=\"#666666\" borderopacity=\"1.0\" inkscape:pageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:document-units=\"pt\"/>\n",
+       "  <sodipodi:namedview id=\"namedview156\" pagecolor=\"#ffffff\" bordercolor=\"#000000\" borderopacity=\"0.25\" inkscape:showpageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:deskcolor=\"#d1d1d1\" inkscape:document-units=\"pt\"/>\n",
        "  <defs id=\"defs55\">\n",
        "    <g id=\"g53\">\n",
        "      <symbol overflow=\"visible\" id=\"glyph0-0\">\n",
@@ -183,76 +183,76 @@
        "  </defs>\n",
        "  <g id=\"surface1\" transform=\"translate(-151.00212,-141.52576)\">\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g59\">\n",
-       "      <use xlink:href=\"#glyph0-1\" x=\"198.791\" y=\"150.101\" id=\"use57\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-1\" x=\"198.791\" y=\"150.101\" id=\"use57\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g63\">\n",
-       "      <use xlink:href=\"#glyph0-2\" x=\"218.91701\" y=\"150.101\" id=\"use61\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-2\" x=\"218.91701\" y=\"150.101\" id=\"use61\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g67\">\n",
-       "      <use xlink:href=\"#glyph0-3\" x=\"198.791\" y=\"162.056\" id=\"use65\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-3\" x=\"198.791\" y=\"162.056\" id=\"use65\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g71\">\n",
-       "      <use xlink:href=\"#glyph0-4\" x=\"218.91701\" y=\"162.056\" id=\"use69\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-4\" x=\"218.91701\" y=\"162.056\" id=\"use69\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g75\">\n",
-       "      <use xlink:href=\"#glyph0-4\" x=\"156.67599\" y=\"176.84599\" id=\"use73\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-4\" x=\"156.67599\" y=\"176.84599\" id=\"use73\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g79\">\n",
-       "      <use xlink:href=\"#glyph0-1\" x=\"171.62\" y=\"176.84599\" id=\"use77\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-1\" x=\"171.62\" y=\"176.84599\" id=\"use77\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g83\">\n",
-       "      <use xlink:href=\"#glyph0-5\" x=\"198.791\" y=\"176.84599\" id=\"use81\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-5\" x=\"198.791\" y=\"176.84599\" id=\"use81\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g87\">\n",
-       "      <use xlink:href=\"#glyph0-1\" x=\"218.91701\" y=\"176.84599\" id=\"use85\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-1\" x=\"218.91701\" y=\"176.84599\" id=\"use85\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g91\">\n",
-       "      <use xlink:href=\"#glyph0-2\" x=\"156.67599\" y=\"188.80099\" id=\"use89\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-2\" x=\"156.67599\" y=\"188.80099\" id=\"use89\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g95\">\n",
-       "      <use xlink:href=\"#glyph0-4\" x=\"171.62\" y=\"188.80099\" id=\"use93\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-4\" x=\"171.62\" y=\"188.80099\" id=\"use93\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g99\">\n",
-       "      <use xlink:href=\"#glyph0-3\" x=\"198.791\" y=\"188.80099\" id=\"use97\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-3\" x=\"198.791\" y=\"188.80099\" id=\"use97\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g103\">\n",
-       "      <use xlink:href=\"#glyph0-4\" x=\"218.91701\" y=\"188.80099\" id=\"use101\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-4\" x=\"218.91701\" y=\"188.80099\" id=\"use101\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g107\">\n",
-       "      <use xlink:href=\"#glyph1-1\" x=\"197.68401\" y=\"203.024\" id=\"use105\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-1\" x=\"197.68401\" y=\"203.024\" id=\"use105\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g111\">\n",
-       "      <use xlink:href=\"#glyph1-2\" x=\"218.91701\" y=\"203.024\" id=\"use109\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-2\" x=\"218.91701\" y=\"203.024\" id=\"use109\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g115\">\n",
-       "      <use xlink:href=\"#glyph2-1\" x=\"193.60899\" y=\"214.979\" id=\"use113\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph2-1\" x=\"193.60899\" y=\"214.979\" id=\"use113\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g119\">\n",
-       "      <use xlink:href=\"#glyph3-1\" x=\"199.30299\" y=\"216.47301\" id=\"use117\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph3-1\" x=\"199.30299\" y=\"216.47301\" id=\"use117\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g123\">\n",
-       "      <use xlink:href=\"#glyph2-1\" x=\"213.735\" y=\"214.979\" id=\"use121\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph2-1\" x=\"213.735\" y=\"214.979\" id=\"use121\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g127\">\n",
-       "      <use xlink:href=\"#glyph3-2\" x=\"219.429\" y=\"216.47301\" id=\"use125\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph3-2\" x=\"219.429\" y=\"216.47301\" id=\"use125\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g131\">\n",
-       "      <use xlink:href=\"#glyph4-1\" x=\"185.85699\" y=\"141.93201\" id=\"use129\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph4-1\" x=\"185.85699\" y=\"141.93201\" id=\"use129\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g135\">\n",
-       "      <use xlink:href=\"#glyph4-2\" x=\"224.317\" y=\"141.93201\" id=\"use133\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph4-2\" x=\"224.317\" y=\"141.93201\" id=\"use133\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g139\">\n",
-       "      <use xlink:href=\"#glyph4-1\" x=\"148.924\" y=\"168.677\" id=\"use137\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph4-1\" x=\"148.924\" y=\"168.677\" id=\"use137\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g143\">\n",
-       "      <use xlink:href=\"#glyph4-2\" x=\"177.02\" y=\"168.677\" id=\"use141\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph4-2\" x=\"177.02\" y=\"168.677\" id=\"use141\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g147\">\n",
-       "      <use xlink:href=\"#glyph4-1\" x=\"185.85699\" y=\"168.677\" id=\"use145\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph4-1\" x=\"185.85699\" y=\"168.677\" id=\"use145\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g151\">\n",
-       "      <use xlink:href=\"#glyph4-2\" x=\"224.317\" y=\"168.677\" id=\"use149\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph4-2\" x=\"224.317\" y=\"168.677\" id=\"use149\"/>\n",
        "    </g>\n",
        "  </g>\n",
        "</svg>"
@@ -305,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
