--- a/docs/notebooks/03_eig_svd_table.ipynb
+++ b/docs/notebooks/03_eig_svd_table.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import SVG, display\n",
-    "from matrixlayout import eigproblem_svg\n"
+    "from matrixlayout import eigproblem_svg"
    ]
   },
   {
@@ -32,7 +32,7 @@
      "data": {
       "image/svg+xml": [
        "<svg xmlns:inkscape=\"http://www.inkscape.org/namespaces/inkscape\" xmlns:sodipodi=\"http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:svg=\"http://www.w3.org/2000/svg\" width=\"147.55859pt\" height=\"130.89391pt\" viewBox=\"0 0 147.55859 130.89391\" version=\"1.2\" id=\"svg246\" sodipodi:docname=\"output.svg\">\n",
-       "  <sodipodi:namedview id=\"namedview248\" pagecolor=\"#ffffff\" bordercolor=\"#666666\" borderopacity=\"1.0\" inkscape:pageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:document-units=\"pt\"/>\n",
+       "  <sodipodi:namedview id=\"namedview248\" pagecolor=\"#ffffff\" bordercolor=\"#000000\" borderopacity=\"0.25\" inkscape:showpageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:deskcolor=\"#d1d1d1\" inkscape:document-units=\"pt\"/>\n",
        "  <defs id=\"defs79\">\n",
        "    <g id=\"g77\">\n",
        "      <symbol overflow=\"visible\" id=\"glyph0-0\">\n",
@@ -115,120 +115,120 @@
        "  <g id=\"surface1\" transform=\"translate(-148.71094,-124.80072)\">\n",
        "    <path style=\"fill:none;stroke:#000000;stroke-width:0.797;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-opacity:1\" d=\"M -0.0010625,7.8125e-4 H 147.55753\" transform=\"matrix(1,0,0,-1,148.712,125.2)\" id=\"path81\"/>\n",
        "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g85\">\n",
-       "      <use xlink:href=\"#glyph0-1\" x=\"148.71201\" y=\"136.756\" id=\"use83\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-1\" x=\"148.71201\" y=\"136.756\" id=\"use83\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g89\">\n",
-       "      <use xlink:href=\"#glyph1-1\" x=\"224.694\" y=\"136.756\" id=\"use87\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-1\" x=\"224.694\" y=\"136.756\" id=\"use87\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g93\">\n",
-       "      <use xlink:href=\"#glyph1-2\" x=\"283.95154\" y=\"136.756\" id=\"use91\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-2\" x=\"283.95154\" y=\"136.756\" id=\"use91\"/>\n",
        "    </g>\n",
        "    <path style=\"fill:none;stroke:#000000;stroke-width:0.299;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-opacity:1\" d=\"M -1.875e-4,-3.125e-5 H 31.605281\" transform=\"matrix(1,0,0,-1,211.383,142.207)\" id=\"path95\"/>\n",
        "    <path style=\"fill:none;stroke:#000000;stroke-width:0.299;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-opacity:1\" d=\"M -4.6875e-4,-3.125e-5 H 25.624531\" transform=\"matrix(1,0,0,-1,270.645,142.207)\" id=\"path97\"/>\n",
        "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g101\">\n",
-       "      <use xlink:href=\"#glyph0-2\" x=\"148.71201\" y=\"153.51401\" id=\"use99\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-2\" x=\"148.71201\" y=\"153.51401\" id=\"use99\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g105\">\n",
-       "      <use xlink:href=\"#glyph2-1\" x=\"157.46001\" y=\"155.008\" id=\"use103\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph2-1\" x=\"157.46001\" y=\"155.008\" id=\"use103\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g109\">\n",
-       "      <use xlink:href=\"#glyph1-3\" x=\"224.694\" y=\"153.51401\" id=\"use107\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-3\" x=\"224.694\" y=\"153.51401\" id=\"use107\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g113\">\n",
-       "      <use xlink:href=\"#glyph1-3\" x=\"283.95154\" y=\"153.51401\" id=\"use111\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-3\" x=\"283.95154\" y=\"153.51401\" id=\"use111\"/>\n",
        "    </g>\n",
        "    <path style=\"fill:none;stroke:#000000;stroke-width:0.299;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-opacity:1\" d=\"M -1.875e-4,1.5625e-4 H 31.605281\" transform=\"matrix(1,0,0,-1,211.383,158.965)\" id=\"path115\"/>\n",
        "    <path style=\"fill:none;stroke:#000000;stroke-width:0.299;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-opacity:1\" d=\"M -4.6875e-4,1.5625e-4 H 25.624531\" transform=\"matrix(1,0,0,-1,270.645,158.965)\" id=\"path117\"/>\n",
        "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g129\">\n",
-       "      <use xlink:href=\"#glyph1-4\" x=\"148.71201\" y=\"179.405\" id=\"use119\" width=\"100%\" height=\"100%\"/>\n",
-       "      <use xlink:href=\"#glyph1-5\" x=\"154.24722\" y=\"179.405\" id=\"use121\" width=\"100%\" height=\"100%\"/>\n",
-       "      <use xlink:href=\"#glyph1-6\" x=\"159.22852\" y=\"179.405\" id=\"use123\" width=\"100%\" height=\"100%\"/>\n",
-       "      <use xlink:href=\"#glyph1-7\" x=\"163.15778\" y=\"179.405\" id=\"use125\" width=\"100%\" height=\"100%\"/>\n",
-       "      <use xlink:href=\"#glyph1-6\" x=\"165.92538\" y=\"179.405\" id=\"use127\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-4\" x=\"148.71201\" y=\"179.405\" id=\"use119\"/>\n",
+       "      <use xlink:href=\"#glyph1-5\" x=\"154.24722\" y=\"179.405\" id=\"use121\"/>\n",
+       "      <use xlink:href=\"#glyph1-6\" x=\"159.22852\" y=\"179.405\" id=\"use123\"/>\n",
+       "      <use xlink:href=\"#glyph1-7\" x=\"163.15778\" y=\"179.405\" id=\"use125\"/>\n",
+       "      <use xlink:href=\"#glyph1-6\" x=\"165.92538\" y=\"179.405\" id=\"use127\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g137\">\n",
-       "      <use xlink:href=\"#glyph1-8\" x=\"173.17218\" y=\"179.405\" id=\"use131\" width=\"100%\" height=\"100%\"/>\n",
-       "      <use xlink:href=\"#glyph1-9\" x=\"176.21675\" y=\"179.405\" id=\"use133\" width=\"100%\" height=\"100%\"/>\n",
-       "      <use xlink:href=\"#glyph1-10\" x=\"181.19804\" y=\"179.405\" id=\"use135\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-8\" x=\"173.17218\" y=\"179.405\" id=\"use131\"/>\n",
+       "      <use xlink:href=\"#glyph1-9\" x=\"176.21675\" y=\"179.405\" id=\"use133\"/>\n",
+       "      <use xlink:href=\"#glyph1-10\" x=\"181.19804\" y=\"179.405\" id=\"use135\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g141\">\n",
-       "      <use xlink:href=\"#glyph0-3\" x=\"188.425\" y=\"179.405\" id=\"use139\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-3\" x=\"188.425\" y=\"179.405\" id=\"use139\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g145\">\n",
-       "      <use xlink:href=\"#glyph2-2\" x=\"195.77901\" y=\"180.899\" id=\"use143\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph2-2\" x=\"195.77901\" y=\"180.899\" id=\"use143\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g149\">\n",
-       "      <use xlink:href=\"#glyph3-1\" x=\"217.36\" y=\"165.136\" id=\"use147\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph3-1\" x=\"217.36\" y=\"165.136\" id=\"use147\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g153\">\n",
-       "      <use xlink:href=\"#glyph1-3\" x=\"224.694\" y=\"172.70799\" id=\"use151\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-3\" x=\"224.694\" y=\"172.70799\" id=\"use151\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g157\">\n",
-       "      <use xlink:href=\"#glyph1-11\" x=\"224.694\" y=\"184.66299\" id=\"use155\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-11\" x=\"224.694\" y=\"184.66299\" id=\"use155\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g161\">\n",
-       "      <use xlink:href=\"#glyph3-2\" x=\"229.675\" y=\"165.136\" id=\"use159\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph3-2\" x=\"229.675\" y=\"165.136\" id=\"use159\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g165\">\n",
-       "      <use xlink:href=\"#glyph3-1\" x=\"276.62299\" y=\"165.136\" id=\"use163\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph3-1\" x=\"276.62299\" y=\"165.136\" id=\"use163\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g169\">\n",
-       "      <use xlink:href=\"#glyph1-11\" x=\"283.95599\" y=\"172.70799\" id=\"use167\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-11\" x=\"283.95599\" y=\"172.70799\" id=\"use167\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g173\">\n",
-       "      <use xlink:href=\"#glyph1-3\" x=\"283.95599\" y=\"184.66299\" id=\"use171\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-3\" x=\"283.95599\" y=\"184.66299\" id=\"use171\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g177\">\n",
-       "      <use xlink:href=\"#glyph3-2\" x=\"288.93799\" y=\"165.136\" id=\"use175\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph3-2\" x=\"288.93799\" y=\"165.136\" id=\"use175\"/>\n",
        "    </g>\n",
        "    <path style=\"fill:none;stroke:#000000;stroke-width:0.498;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-opacity:1\" d=\"M -0.0010625,7.5e-4 H 147.55753\" transform=\"matrix(1,0,0,-1,148.712,196.282)\" id=\"path179\"/>\n",
        "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g183\">\n",
-       "      <use xlink:href=\"#glyph1-12\" x=\"148.71201\" y=\"216.647\" id=\"use181\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-12\" x=\"148.71201\" y=\"216.647\" id=\"use181\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g187\">\n",
-       "      <use xlink:href=\"#glyph1-13\" x=\"158.39963\" y=\"216.647\" id=\"use185\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-13\" x=\"158.39963\" y=\"216.647\" id=\"use185\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g191\">\n",
-       "      <use xlink:href=\"#glyph3-1\" x=\"217.36\" y=\"202.599\" id=\"use189\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph3-1\" x=\"217.36\" y=\"202.599\" id=\"use189\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g195\">\n",
-       "      <use xlink:href=\"#glyph1-1\" x=\"224.694\" y=\"210.17101\" id=\"use193\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-1\" x=\"224.694\" y=\"210.17101\" id=\"use193\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g199\">\n",
-       "      <use xlink:href=\"#glyph1-11\" x=\"252.353\" y=\"210.17101\" id=\"use197\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-11\" x=\"252.353\" y=\"210.17101\" id=\"use197\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g203\">\n",
-       "      <use xlink:href=\"#glyph1-11\" x=\"224.694\" y=\"222.12601\" id=\"use201\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-11\" x=\"224.694\" y=\"222.12601\" id=\"use201\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g207\">\n",
-       "      <use xlink:href=\"#glyph1-2\" x=\"252.353\" y=\"222.12601\" id=\"use205\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-2\" x=\"252.353\" y=\"222.12601\" id=\"use205\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g211\">\n",
-       "      <use xlink:href=\"#glyph3-2\" x=\"257.33401\" y=\"202.599\" id=\"use209\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph3-2\" x=\"257.33401\" y=\"202.599\" id=\"use209\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g215\">\n",
-       "      <use xlink:href=\"#glyph0-4\" x=\"148.71201\" y=\"246.226\" id=\"use213\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-4\" x=\"148.71201\" y=\"246.226\" id=\"use213\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#0000ff;fill-opacity:1\" id=\"g219\">\n",
-       "      <use xlink:href=\"#glyph1-13\" x=\"158.16299\" y=\"246.226\" id=\"use217\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-13\" x=\"158.16299\" y=\"246.226\" id=\"use217\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g223\">\n",
-       "      <use xlink:href=\"#glyph3-1\" x=\"223.03\" y=\"232.179\" id=\"use221\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph3-1\" x=\"223.03\" y=\"232.179\" id=\"use221\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g227\">\n",
-       "      <use xlink:href=\"#glyph1-3\" x=\"230.36301\" y=\"239.75101\" id=\"use225\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-3\" x=\"230.36301\" y=\"239.75101\" id=\"use225\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g231\">\n",
-       "      <use xlink:href=\"#glyph1-11\" x=\"246.683\" y=\"239.75101\" id=\"use229\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-11\" x=\"246.683\" y=\"239.75101\" id=\"use229\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g235\">\n",
-       "      <use xlink:href=\"#glyph1-11\" x=\"230.36301\" y=\"251.70599\" id=\"use233\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-11\" x=\"230.36301\" y=\"251.70599\" id=\"use233\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g239\">\n",
-       "      <use xlink:href=\"#glyph1-3\" x=\"246.683\" y=\"251.70599\" id=\"use237\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-3\" x=\"246.683\" y=\"251.70599\" id=\"use237\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g243\">\n",
-       "      <use xlink:href=\"#glyph3-2\" x=\"251.66499\" y=\"232.179\" id=\"use241\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph3-2\" x=\"251.66499\" y=\"232.179\" id=\"use241\"/>\n",
        "    </g>\n",
        "  </g>\n",
        "</svg>"
@@ -249,7 +249,7 @@
     "}\n",
     "\n",
     "svg = eigproblem_svg(spec, case=\"S\")\n",
-    "display(SVG(svg))\n"
+    "display(SVG(svg))"
    ]
   },
   {
@@ -278,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
