--- a/docs/notebooks/04_decorators_gallery.ipynb
+++ b/docs/notebooks/04_decorators_gallery.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "32cb2b1a",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
      "data": {
       "image/svg+xml": [
        "<svg xmlns:inkscape=\"http://www.inkscape.org/namespaces/inkscape\" xmlns:sodipodi=\"http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:svg=\"http://www.w3.org/2000/svg\" width=\"38.04187pt\" height=\"24.432032pt\" viewBox=\"0 0 38.04187 24.432032\" version=\"1.2\" id=\"svg63\" sodipodi:docname=\"output.svg\">\n",
-       "  <sodipodi:namedview id=\"namedview65\" pagecolor=\"#ffffff\" bordercolor=\"#666666\" borderopacity=\"1.0\" inkscape:pageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:document-units=\"pt\"/>\n",
+       "  <sodipodi:namedview id=\"namedview65\" pagecolor=\"#ffffff\" bordercolor=\"#000000\" borderopacity=\"0.25\" inkscape:showpageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:deskcolor=\"#d1d1d1\" inkscape:document-units=\"pt\"/>\n",
        "  <defs id=\"defs28\">\n",
        "    <g id=\"g26\">\n",
        "      <symbol overflow=\"visible\" id=\"glyph0-0\">\n",
@@ -75,26 +75,26 @@
        "  </defs>\n",
        "  <g id=\"surface1\" transform=\"translate(-177.97313,-141.73459)\">\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g32\">\n",
-       "      <use xlink:href=\"#glyph0-1\" x=\"187.034\" y=\"151.53999\" id=\"use30\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-1\" x=\"187.034\" y=\"151.53999\" id=\"use30\"/>\n",
        "    </g>\n",
        "    <path style=\"fill:none;stroke:#000000;stroke-width:0.398;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-opacity:1\" d=\"M 0.0014375,-0.00159375 H 11.755344\" transform=\"matrix(1,0,0,-1,183.647,141.932)\" id=\"path34\"/>\n",
        "    <path style=\"fill:none;stroke:#000000;stroke-width:0.398;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-opacity:1\" d=\"M 0.00165625,0.0014375 V 12.794406\" transform=\"matrix(1,0,0,-1,183.846,154.728)\" id=\"path36\"/>\n",
        "    <path style=\"fill:none;stroke:#000000;stroke-width:0.398;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-opacity:1\" d=\"M 1.25e-4,0.0014375 V 12.794406\" transform=\"matrix(1,0,0,-1,195.203,154.728)\" id=\"path38\"/>\n",
        "    <path style=\"fill:none;stroke:#000000;stroke-width:0.398;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:10;stroke-opacity:1\" d=\"M 0.0014375,0.0014375 H 11.755344\" transform=\"matrix(1,0,0,-1,183.647,154.728)\" id=\"path40\"/>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g44\">\n",
-       "      <use xlink:href=\"#glyph0-2\" x=\"205.36501\" y=\"151.53999\" id=\"use42\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-2\" x=\"205.36501\" y=\"151.53999\" id=\"use42\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g48\">\n",
-       "      <use xlink:href=\"#glyph0-3\" x=\"190.42101\" y=\"163.495\" id=\"use46\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-3\" x=\"190.42101\" y=\"163.495\" id=\"use46\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g52\">\n",
-       "      <use xlink:href=\"#glyph0-4\" x=\"205.36501\" y=\"163.495\" id=\"use50\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-4\" x=\"205.36501\" y=\"163.495\" id=\"use50\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g56\">\n",
-       "      <use xlink:href=\"#glyph1-1\" x=\"175.895\" y=\"142.651\" id=\"use54\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-1\" x=\"175.895\" y=\"142.651\" id=\"use54\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g60\">\n",
-       "      <use xlink:href=\"#glyph1-2\" x=\"210.765\" y=\"142.651\" id=\"use58\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-2\" x=\"210.765\" y=\"142.651\" id=\"use58\"/>\n",
        "    </g>\n",
        "  </g>\n",
        "</svg>"
@@ -135,7 +135,7 @@
      "data": {
       "image/svg+xml": [
        "<svg xmlns:inkscape=\"http://www.inkscape.org/namespaces/inkscape\" xmlns:sodipodi=\"http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:svg=\"http://www.w3.org/2000/svg\" width=\"43.221878pt\" height=\"24.23616pt\" viewBox=\"0 0 43.221878 24.23616\" version=\"1.2\" id=\"svg59\" sodipodi:docname=\"output.svg\">\n",
-       "  <sodipodi:namedview id=\"namedview61\" pagecolor=\"#ffffff\" bordercolor=\"#666666\" borderopacity=\"1.0\" inkscape:pageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:document-units=\"pt\"/>\n",
+       "  <sodipodi:namedview id=\"namedview61\" pagecolor=\"#ffffff\" bordercolor=\"#000000\" borderopacity=\"0.25\" inkscape:showpageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:deskcolor=\"#d1d1d1\" inkscape:document-units=\"pt\"/>\n",
        "  <defs id=\"defs28\">\n",
        "    <g id=\"g26\">\n",
        "      <symbol overflow=\"visible\" id=\"glyph0-0\">\n",
@@ -167,23 +167,23 @@
        "  <g id=\"surface1\" transform=\"translate(-177.97313,-141.73047)\">\n",
        "    <path style=\"fill:#fff000;fill-opacity:1;fill-rule:nonzero;stroke:none\" d=\"m 183.64844,154.12891 h 10.95703 v -12.39844 h -10.95703 z m 0,0\" id=\"path30\"/>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g34\">\n",
-       "      <use xlink:href=\"#glyph0-1\" x=\"186.63499\" y=\"151.14101\" id=\"use32\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-1\" x=\"186.63499\" y=\"151.14101\" id=\"use32\"/>\n",
        "    </g>\n",
        "    <path style=\"fill:#fff000;fill-opacity:1;fill-rule:nonzero;stroke:none\" d=\"m 204.56641,154.12891 h 10.96093 v -12.39844 h -10.96093 z m 0,0\" id=\"path36\"/>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g40\">\n",
-       "      <use xlink:href=\"#glyph0-2\" x=\"207.55701\" y=\"151.14101\" id=\"use38\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-2\" x=\"207.55701\" y=\"151.14101\" id=\"use38\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g44\">\n",
-       "      <use xlink:href=\"#glyph0-3\" x=\"189.62399\" y=\"163.09599\" id=\"use42\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-3\" x=\"189.62399\" y=\"163.09599\" id=\"use42\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g48\">\n",
-       "      <use xlink:href=\"#glyph0-4\" x=\"210.54601\" y=\"163.09599\" id=\"use46\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-4\" x=\"210.54601\" y=\"163.09599\" id=\"use46\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g52\">\n",
-       "      <use xlink:href=\"#glyph1-1\" x=\"175.895\" y=\"142.451\" id=\"use50\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-1\" x=\"175.895\" y=\"142.451\" id=\"use50\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g56\">\n",
-       "      <use xlink:href=\"#glyph1-2\" x=\"215.94501\" y=\"142.451\" id=\"use54\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-2\" x=\"215.94501\" y=\"142.451\" id=\"use54\"/>\n",
        "    </g>\n",
        "  </g>\n",
        "</svg>"
@@ -223,7 +223,7 @@
      "data": {
       "image/svg+xml": [
        "<svg xmlns:inkscape=\"http://www.inkscape.org/namespaces/inkscape\" xmlns:sodipodi=\"http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:svg=\"http://www.w3.org/2000/svg\" width=\"32.014877pt\" height=\"23.921875pt\" viewBox=\"0 0 32.014877 23.921875\" version=\"1.2\" id=\"svg58\" sodipodi:docname=\"output.svg\">\n",
-       "  <sodipodi:namedview id=\"namedview60\" pagecolor=\"#ffffff\" bordercolor=\"#666666\" borderopacity=\"1.0\" inkscape:pageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:document-units=\"pt\"/>\n",
+       "  <sodipodi:namedview id=\"namedview60\" pagecolor=\"#ffffff\" bordercolor=\"#000000\" borderopacity=\"0.25\" inkscape:showpageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:deskcolor=\"#d1d1d1\" inkscape:document-units=\"pt\"/>\n",
        "  <defs id=\"defs31\">\n",
        "    <g id=\"g29\">\n",
        "      <symbol overflow=\"visible\" id=\"glyph0-0\">\n",
@@ -257,22 +257,22 @@
        "  </defs>\n",
        "  <g id=\"surface1\" transform=\"translate(-177.97313,-141.52475)\">\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g35\">\n",
-       "      <use xlink:href=\"#glyph0-1\" x=\"183.647\" y=\"150.101\" id=\"use33\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-1\" x=\"183.647\" y=\"150.101\" id=\"use33\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g39\">\n",
-       "      <use xlink:href=\"#glyph1-1\" x=\"198.591\" y=\"150.101\" id=\"use37\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-1\" x=\"198.591\" y=\"150.101\" id=\"use37\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g43\">\n",
-       "      <use xlink:href=\"#glyph0-2\" x=\"183.647\" y=\"162.056\" id=\"use41\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-2\" x=\"183.647\" y=\"162.056\" id=\"use41\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g47\">\n",
-       "      <use xlink:href=\"#glyph1-2\" x=\"198.591\" y=\"162.056\" id=\"use45\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-2\" x=\"198.591\" y=\"162.056\" id=\"use45\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g51\">\n",
-       "      <use xlink:href=\"#glyph2-1\" x=\"175.895\" y=\"141.931\" id=\"use49\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph2-1\" x=\"175.895\" y=\"141.931\" id=\"use49\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g55\">\n",
-       "      <use xlink:href=\"#glyph2-2\" x=\"204.73801\" y=\"141.931\" id=\"use53\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph2-2\" x=\"204.73801\" y=\"141.931\" id=\"use53\"/>\n",
        "    </g>\n",
        "  </g>\n",
        "</svg>"
@@ -312,7 +312,7 @@
      "data": {
       "image/svg+xml": [
        "<svg xmlns:inkscape=\"http://www.inkscape.org/namespaces/inkscape\" xmlns:sodipodi=\"http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:svg=\"http://www.w3.org/2000/svg\" width=\"43.22287pt\" height=\"25.394531pt\" viewBox=\"0 0 43.22287 25.394531\" version=\"1.2\" id=\"svg63\" sodipodi:docname=\"output.svg\">\n",
-       "  <sodipodi:namedview id=\"namedview65\" pagecolor=\"#ffffff\" bordercolor=\"#666666\" borderopacity=\"1.0\" inkscape:pageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:document-units=\"pt\"/>\n",
+       "  <sodipodi:namedview id=\"namedview65\" pagecolor=\"#ffffff\" bordercolor=\"#000000\" borderopacity=\"0.25\" inkscape:showpageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:deskcolor=\"#d1d1d1\" inkscape:document-units=\"pt\"/>\n",
        "  <defs id=\"defs28\">\n",
        "    <g id=\"g26\">\n",
        "      <symbol overflow=\"visible\" id=\"glyph0-0\">\n",
@@ -344,25 +344,25 @@
        "  <g id=\"surface1\" transform=\"translate(-177.97313,-141.73047)\">\n",
        "    <path style=\"fill:#e3e3e3;fill-opacity:1;fill-rule:nonzero;stroke:none\" d=\"m 183.64844,154.12891 h 10.95703 v -12.39844 h -10.95703 z m 0,0\" id=\"path30\"/>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g34\">\n",
-       "      <use xlink:href=\"#glyph0-1\" x=\"186.63499\" y=\"151.14101\" id=\"use32\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-1\" x=\"186.63499\" y=\"151.14101\" id=\"use32\"/>\n",
        "    </g>\n",
        "    <path style=\"fill:#e3e3e3;fill-opacity:1;fill-rule:nonzero;stroke:none\" d=\"m 204.56641,154.12891 h 10.96093 v -12.39844 h -10.96093 z m 0,0\" id=\"path36\"/>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g40\">\n",
-       "      <use xlink:href=\"#glyph0-2\" x=\"207.55701\" y=\"151.14101\" id=\"use38\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-2\" x=\"207.55701\" y=\"151.14101\" id=\"use38\"/>\n",
        "    </g>\n",
        "    <path style=\"fill:#e3e3e3;fill-opacity:1;fill-rule:nonzero;stroke:none\" d=\"m 183.64844,167.125 h 10.95703 v -12.39844 h -10.95703 z m 0,0\" id=\"path42\"/>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g46\">\n",
-       "      <use xlink:href=\"#glyph0-3\" x=\"186.63499\" y=\"164.13699\" id=\"use44\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-3\" x=\"186.63499\" y=\"164.13699\" id=\"use44\"/>\n",
        "    </g>\n",
        "    <path style=\"fill:#e3e3e3;fill-opacity:1;fill-rule:nonzero;stroke:none\" d=\"m 204.56641,167.125 h 10.96093 v -12.39844 h -10.96093 z m 0,0\" id=\"path48\"/>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g52\">\n",
-       "      <use xlink:href=\"#glyph0-4\" x=\"207.55701\" y=\"164.13699\" id=\"use50\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-4\" x=\"207.55701\" y=\"164.13699\" id=\"use50\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g56\">\n",
-       "      <use xlink:href=\"#glyph1-1\" x=\"175.895\" y=\"142.972\" id=\"use54\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-1\" x=\"175.895\" y=\"142.972\" id=\"use54\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g60\">\n",
-       "      <use xlink:href=\"#glyph1-2\" x=\"215.946\" y=\"142.972\" id=\"use58\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-2\" x=\"215.946\" y=\"142.972\" id=\"use58\"/>\n",
        "    </g>\n",
        "  </g>\n",
        "</svg>"
@@ -380,7 +380,7 @@
     "    {\"grid\": (0, 1), \"entries\": [sel_box((0, 0), (1, 1))], \"decorator\": decorator_bg(\"gray!20\")},\n",
     "]\n",
     "svg = grid_svg(matrices=matrices, decorators=decorators)\n",
-    "display(SVG(svg))\n"
+    "display(SVG(svg))"
    ]
   },
   {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "3d9be0cb",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
      "data": {
       "image/svg+xml": [
        "<svg xmlns:inkscape=\"http://www.inkscape.org/namespaces/inkscape\" xmlns:sodipodi=\"http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:svg=\"http://www.w3.org/2000/svg\" width=\"31.266876pt\" height=\"23.921875pt\" viewBox=\"0 0 31.266876 23.921875\" version=\"1.2\" id=\"svg55\" sodipodi:docname=\"output.svg\">\n",
-       "  <sodipodi:namedview id=\"namedview57\" pagecolor=\"#ffffff\" bordercolor=\"#666666\" borderopacity=\"1.0\" inkscape:pageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:document-units=\"pt\"/>\n",
+       "  <sodipodi:namedview id=\"namedview57\" pagecolor=\"#ffffff\" bordercolor=\"#000000\" borderopacity=\"0.25\" inkscape:showpageshadow=\"2\" inkscape:pageopacity=\"0.0\" inkscape:pagecheckerboard=\"0\" inkscape:deskcolor=\"#d1d1d1\" inkscape:document-units=\"pt\"/>\n",
        "  <defs id=\"defs28\">\n",
        "    <g id=\"g26\">\n",
        "      <symbol overflow=\"visible\" id=\"glyph0-0\">\n",
@@ -433,22 +433,22 @@
        "  </defs>\n",
        "  <g id=\"surface1\" transform=\"translate(-177.97313,-141.52475)\">\n",
        "    <g style=\"fill:#ff0000;fill-opacity:1\" id=\"g32\">\n",
-       "      <use xlink:href=\"#glyph0-1\" x=\"183.647\" y=\"150.101\" id=\"use30\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-1\" x=\"183.647\" y=\"150.101\" id=\"use30\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#ff0000;fill-opacity:1\" id=\"g36\">\n",
-       "      <use xlink:href=\"#glyph0-2\" x=\"198.591\" y=\"150.101\" id=\"use34\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-2\" x=\"198.591\" y=\"150.101\" id=\"use34\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#ff0000;fill-opacity:1\" id=\"g40\">\n",
-       "      <use xlink:href=\"#glyph0-3\" x=\"183.647\" y=\"162.056\" id=\"use38\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-3\" x=\"183.647\" y=\"162.056\" id=\"use38\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#ff0000;fill-opacity:1\" id=\"g44\">\n",
-       "      <use xlink:href=\"#glyph0-4\" x=\"198.591\" y=\"162.056\" id=\"use42\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph0-4\" x=\"198.591\" y=\"162.056\" id=\"use42\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g48\">\n",
-       "      <use xlink:href=\"#glyph1-1\" x=\"175.895\" y=\"141.931\" id=\"use46\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-1\" x=\"175.895\" y=\"141.931\" id=\"use46\"/>\n",
        "    </g>\n",
        "    <g style=\"fill:#000000;fill-opacity:1\" id=\"g52\">\n",
-       "      <use xlink:href=\"#glyph1-2\" x=\"203.99001\" y=\"141.931\" id=\"use50\" width=\"100%\" height=\"100%\"/>\n",
+       "      <use xlink:href=\"#glyph1-2\" x=\"203.99001\" y=\"141.931\" id=\"use50\"/>\n",
        "    </g>\n",
        "  </g>\n",
        "</svg>"
@@ -466,7 +466,7 @@
     "    {\"grid\": (0, 1), \"entries\": [sel_rows([0, 1])], \"decorator\": decorator_color(\"red\")},\n",
     "]\n",
     "svg = grid_svg(matrices=matrices, decorators=decorators)\n",
-    "display(SVG(svg))\n"
+    "display(SVG(svg))"
    ]
   },
   {
@@ -495,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
